# MTEngineSDL

./: .gitignore  CMakeLists.txt  README.md  conan-WIP.sh
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: build-assets.sh  console-inverted-plain.gfx  console-plain.gfx  console_inverted_plain.gfx  console_inverted_plain_gfx.h  console_plain_gfx.h  gamecontrollerdb.txt.zlib
other/: list-src-files.sh  rebuild-utis-macos.sh
other/DeployMaker/: test-file1.abc
other/DeployMaker/src/: GFX_WriteImage.cpp  SYS_Defs.h  SYS_Startup.cpp
other/GenerateVS2019ProjIncludes/: GenerateVS2019ProjIncludes.sln  GenerateVS2019ProjIncludes.vcxproj  GenerateVS2019ProjIncludes.vcxproj.filters
other/GenerateVS2019ProjIncludes/_RUNTIME_/: config.json
other/GenerateVS2019ProjIncludes/src/: GenerateVS2019ProjIncludes.cpp  SYS_FileSystem.cpp  SYS_FileSystem.h  json.h
platform/Linux/src.Linux/: CSlrFileFromDocuments.cpp  CSlrFileFromDocuments.h  CSlrFileFromOS.cpp  CSlrFileFromOS.h  CSlrFileFromResources.cpp  CSlrFileFromResources.h  CSlrFileFromTemp.cpp  DBG_Log.cpp  DBG_Log.h  SYS_FileSystem.cpp  SYS_FileSystem.h  SYS_LinuxWrapper.cpp  SYS_LinuxWrapper.h  SYS_Platform.cpp  SYS_Platform.h  SYS_SharedMemory.cpp  gl3w.c  main.cpp
platform/Linux/src.Linux/nfd/: ftg_core.h  nfd_zenity.c
platform/MacOS/: build.sh
platform/MacOS/MTEngineSDL.xcodeproj/: project.pbxproj
platform/MacOS/MTEngineSDL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
platform/MacOS/include/: SDL_config.h  SDL_revision.h
platform/MacOS/src.MacOS/: CSlrFileFromDocuments.h  CSlrFileFromDocuments.mm  CSlrFileFromOS.h  CSlrFileFromOS.mm  CSlrFileFromResources.h  CSlrFileFromResources.mm  CSlrFileFromTemp.h  DBG_Log.h  DBG_Log.mm  SYS_FileSystem.h  SYS_FileSystem.mm  SYS_MacOS.h  SYS_MacOS.mm  SYS_MacOSWrapper.h  SYS_MacOSWrapper.mm  SYS_Platform.cpp  SYS_Platform.h  SYS_Platform.mm  SYS_SharedMemory.mm  main.mm  nfd_cocoa.m
platform/Windows/: MTEngineSDL.sln
platform/Windows/MTEngineSDL/: MTEngineSDL.vcxproj  MTEngineSDL.vcxproj.filters
platform/Windows/include/: SDL_config.h  SDL_config_windows.h
platform/Windows/src.Windows/: CSlrFileFromDocuments.cpp  CSlrFileFromDocuments.h  CSlrFileFromOS.cpp  CSlrFileFromOS.h  CSlrFileFromResources.cpp  CSlrFileFromResources.h  CSlrFontSystem.cpp  CSlrFontSystem.h  DBG_ConStream.cpp  DBG_Log.cpp  DBG_Log.h  SYS_FileSystem.cpp  SYS_FileSystem.h  SYS_Memory.cpp  SYS_MiniDump.cpp  SYS_Platform.cpp  SYS_Platform.h  SYS_SharedMemory.cpp  SYS_SharedMemory.h  main.cpp  main.h  unistd.h  win-usleep.cpp
src/: MT_API.h  MT_VERSION.h
src/Embedded/: RES_Embedded.cpp  console_inverted_plain_gfx.h  console_plain_gfx.h
src/Engine/Audio/: CAudioChannel.cpp  CAudioChannel.h  CAudioChannelBusFloat.cpp  CAudioChannelBusFloat.h  CAudioChannelBusInt.cpp  CAudioChannelBusInt.h  CAudioChannelMusicPlayer.cpp  CAudioChannelMusicPlayer.h  CMusicChannel.cpp  CMusicChannel.h  CPianoKeyboard.cpp  CPianoKeyboard.h  CSlrMusicFile.cpp  CSlrMusicFile.h  CSlrMusicFileOgg.cpp  CSlrMusicFileOgg.h  CSlrMusicSwitcher.h  SND_Main.cpp  SND_Main.h  SND_SoundEngine.cpp  SND_SoundEngine.h
src/Engine/Audio/MIDI/: CMidiInKeyboard.cpp  CMidiInKeyboard.h
src/Engine/Audio/WAV/: SND_WavReader.cpp  SND_WavReader.h
src/Engine/Core/: CByteBuffer.cpp  CByteBuffer.h  CCombinations.h  CConfigStorage.cpp  CConfigStorage.h  CConfigStorageHjson.cpp  CConfigStorageHjson.h  CContinuousParam.h  CContinuousParamBezier.cpp  CContinuousParamSin.cpp  CContinuousParamSinHalf.cpp  CDataAdapter.cpp  CDataAdapter.h  CGlobalDropFileCallback.h  CGlobalKeyboardCallback.h  CImageData.cpp  CImageData.h  CSlrAnimation.cpp  CSlrAnimation.h  CSlrDate.cpp  CSlrDate.h  CSlrFile.cpp  CSlrFile.h  CSlrFileFromMemory.cpp  CSlrFileFromMemory.h  CSlrFileMemory.cpp  CSlrFileMemory.h  CSlrFileZlib.cpp  CSlrFileZlib.h  CSlrFont.cpp  CSlrFont.h  CSlrFontBitmap.cpp  CSlrFontBitmap.h  CSlrFontProportional.cpp  CSlrFontProportional.h  CSlrImage.cpp  CSlrImage.h  CSlrImageBase.cpp  CSlrImageBase.h  CSlrImageMask.cpp  (+54 more)
src/Engine/Core/GamePads/: CGamePad.h  CGamePadAxisMotionToButton.h  GAM_GamePads.cpp  GAM_GamePads.h
src/Engine/Core/Net/: CNetClient.cpp  CNetClient.h  CNetClientData.cpp  CNetClientData.h  CNetPacket.cpp  CNetPacket.h  CNetServer.cpp  CNetServer.h  NET_Includes.h  NET_Main.cpp  NET_Main.h
src/Engine/Core/Pool/: CPool.cpp  CPool.h
src/Engine/Core/Render/: CRenderBackend.cpp  CRenderBackend.h  CRenderBackendMetal.h  CRenderBackendMetal.mm  CRenderBackendOpenGL3.cpp  CRenderBackendOpenGL3.h  VID_Blits.cpp  VID_Blits.h  VID_ImageBinding.cpp  VID_Main.cpp  VID_Main.h
src/Engine/Funct/: CFeatureConfig.cpp  CFeatureConfig.h  FUN_GenerateSinTab.cpp  FUN_GenerateSinTab.h
src/Engine/Funct/DataTable/: CDataTable.cpp  CGuiViewDataTable.cpp  CGuiViewDataTable.h
src/Engine/Funct/FFT/: SpectrumAnalysis.cpp  SpectrumAnalysis.h  rad2fft.cpp
src/Engine/Funct/ImageProcessing/: IMG_Filters.cpp  IMG_Filters.h  IMG_Scale.cpp
src/Engine/GUI/: CGuiMain.cpp  CGuiMain.h  GUI_Main.cpp  GUI_Main.h
src/Engine/GUI/AudioMixer/: CViewAudioMixer.cpp  CViewAudioMixer.h
src/Engine/GUI/Controls/: CColorsTheme.cpp  CColorsTheme.h  CGuiBackground.cpp  CGuiBackground.h  CGuiButton.cpp  CGuiButton.h  CGuiButtonMenu.cpp  CGuiButtonMenu.h  CGuiButtonSwitch.cpp  CGuiButtonSwitch.h  CGuiButtonText.cpp  CGuiButtonText.h  CGuiEditBoxFloat.cpp  CGuiEditBoxFloat.h  CGuiEditBoxHex.cpp  CGuiEditBoxHex.h  CGuiEditBoxInt.cpp  CGuiEditBoxInt.h  CGuiEditBoxText.cpp  CGuiEditBoxText.h  CGuiEditHex.cpp  CGuiEditHex.h  CGuiElement.cpp  CGuiElement.h  CGuiEvent.cpp  CGuiEvent.h  CGuiLabel.cpp  CGuiLabel.h  CGuiList.cpp  CGuiList.h  CGuiListTree.cpp  CGuiListTree.h  CGuiRadio.cpp  CGuiRadio.h  CGuiRichTextLabel.cpp  CGuiRichTextLabel.h  CGuiSlider.cpp  CGuiSlider.h  CGuiTheme.cpp  CGuiTheme.h  (+35 more)
src/Engine/GUI/Helpers/: CGuiViewConsole.cpp  CGuiViewConsole.h  CGuiViewDebugLog.cpp  CGuiViewDebugLog.h  CGuiViewDummy.cpp  CGuiViewDummy.h  CGuiViewDummySimple.cpp  CGuiViewDummySimple.h  CGuiViewImageWithLayer.cpp  CGuiViewImageWithLayer.h  CGuiViewMessages.cpp  (+10 more)
(+114 files in other folders)
