cmake_minimum_required(VERSION 3.10)
project(MTEngineSDL)

#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_BUILD_TYPE RelWithDebInfo)

add_definitions(
    -DLINUX
    -DIMGUI_IMPL_OPENGL_LOADER_GL3W
)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

include_directories(
    #"/usr/include/gtk-3.0"
    #"/usr/include/glib-2.0"
    #"/usr/lib/x86_64-linux-gnu/glib-2.0/include"
    #"/usr/include/pango-1.0"
    "${CMAKE_CURRENT_BINARY_DIR}/../sdl2/include"
    "${CMAKE_CURRENT_BINARY_DIR}/../libclipboard/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/other/lib/libclipboard/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/other/lib/SDL2-2.0.10-static/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/platform/Linux/src.Linux"
    "${CMAKE_CURRENT_SOURCE_DIR}/platform/Linux/src.Linux/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/."
    "${CMAKE_CURRENT_SOURCE_DIR}/./src"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Embedded"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/WAV"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/Net"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/Pool"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/DataTable"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing/resampler"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing/stb_image"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/LoadingScreen"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/ResourceManager"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Layout"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/hjson"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imguiext"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/implot"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Dependencies/libbase64++"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Dependencies/mempool++"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONDefs"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/lodepng"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/md5"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/minizip"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/mtrand"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/nfd"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/pugixml"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/stb"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/Ogg"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/utf8"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib"
)

add_library(MTEngineSDL STATIC
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Embedded/RES_Embedded.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/WAV/SND_WavReader.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/CAudioChannel.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/CAudioChannelBusFloat.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/CAudioChannelBusInt.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/CAudioChannelMusicPlayer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/CMusicChannel.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/CPianoKeyboard.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/CSlrMusicFile.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/CSlrMusicFileOgg.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/CSlrMusicSwitcher.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/SND_Main.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Audio/SND_SoundEngine.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/Net/CNetClient.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/Net/CNetClientData.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/Net/CNetPacket.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/Net/CNetServer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/Net/NET_Main.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/Pool/CPool.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CByteBuffer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CConfigStorage.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CConfigStorageHjson.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CContinuousParam.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CContinuousParamBezier.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CContinuousParamLinear.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CContinuousParamSin.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CContinuousParamSinHalf.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CDataAdapter.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CImageData.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrAnimation.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrAnimationState.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrFile.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrFileFromMemory.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrFileMemory.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrFileZlib.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrFont.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrFontBitmap.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrFontProportional.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrImage.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrImageBase.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrImageMask.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrImageTexture.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrKeyboardShortcuts.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrResourceBase.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrString.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrTextParser.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrDate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/CSlrTexture.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/GAM_GamePads.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/MTH_FastMath.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/MTH_FixedPoint.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/MTH_Random.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/RES_DeployFile.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/RES_ResourceManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/SYS_CommandLine.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/SYS_Funct.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/SYS_KeyCodes.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/SYS_Main.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/SYS_PIPE.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/SYS_PauseResume.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/SYS_Startup.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/SYS_Threading.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/VID_Blits.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/VID_ImageBinding.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Core/VID_Main.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/DataTable/CDataTable.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/DataTable/CGuiViewDataTable.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/DataTable/FUN_CSVParser.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing/resampler/resampler.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing/stb_image/stb_image.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing/CImageKernel.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing/IMG_Filters.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing/IMG_HoughLines.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing/IMG_Scale.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/ImageProcessing/IMG_SimpleSegmentation.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/CFeatureConfig.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Funct/FUN_IntervalTree.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CColorsTheme.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiBackground.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiButton.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiButtonMenu.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiButtonSwitch.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiButtonText.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiEditBoxFloat.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiEditBoxHex.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiEditBoxInt.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiEditBoxText.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiEditHex.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiElement.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiEvent.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiLabel.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiList.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiListTree.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiRadio.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiRichTextLabel.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiSlider.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiTheme.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiView.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewFade.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewFrame.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewHorizontalScroll.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewList.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewMenu.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewMessageBox.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewMovingPane.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewNumKeys.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewSaveFile.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewSelectFile.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewSelectFolder.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewSplit4.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewToolBox.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewVerticalScroll.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiViewWindowsManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Controls/CGuiWindow.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/LoadingScreen/CGuiViewBaseLoadingScreen.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/LoadingScreen/CGuiViewLoadingScreen.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/ResourceManager/CGuiViewBaseResourceManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/ResourceManager/CGuiViewResourceManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/CRecentlyOpenedFiles.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/CGuiViewConsole.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/CGuiViewDummy.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/CGuiViewImageWithLayer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Helpers/GUI_Debug.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Layout/CLayoutManager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/Layout/CLayoutParameter.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/CGuiMain.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/COneTouchData.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/GUI/GUI_Main.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet/ENET_Callbacks.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet/ENET_Compress.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet/ENET_Host.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet/ENET_List.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet/ENET_Packet.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet/ENET_Peer.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet/ENET_Protocol.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet/ENET_Unix.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/ENet/ENET_Win32.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/hjson/hjson_decode.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/hjson/hjson_encode.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/hjson/hjson_parsenumber.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/hjson/hjson_value.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui/imgui_demo.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui/imgui_draw.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui/imgui_freetype.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui/imgui_impl_opengl3.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui/imgui_impl_sdl.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui/imgui_tables.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui/imgui_widgets.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui/imgui_demo.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imgui/imgui.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imguiext/imguial_fonts.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imguiext/imguial_log.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imguiext/imguial_term.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imguiext/imguiComboFilter.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imguiext/imguifilesystem.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/imguiext/imguihelper.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/implot/implot_demo.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/implot/implot.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcapimin.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/transupp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdmerge.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jfdctflt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/cdjpeg.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jidctfst.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/rdcolmap.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcinit.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcarith.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jmemansi.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdapistd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/wrtarga.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdmaster.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdarith.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/rdppm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdpostct.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jfdctfst.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcapistd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcsample.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcmarker.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdmainct.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/rdtarga.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/rdgif.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jutils.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jddctmgr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/rdswitch.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcdctmgr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcparam.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdcoefct.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/wrgif.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jidctint.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/wrppm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdmarker.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdcolor.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdsample.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jccoefct.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jerror.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/rdrle.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jctrans.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/wrbmp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/rdbmp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jchuff.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdatadst.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jccolor.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jidctflt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jmemmgr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdapimin.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcmaster.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdatasrc.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcmainct.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcomapi.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/wrrle.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdinput.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdhuff.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jfdctint.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jcprepct.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jdtrans.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jquant1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jquant2.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/jpeg-9a/jaricom.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/JPEGWriter.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/jpeg/JPEGReader.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONDebug.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONWriter.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/internalJSONNode.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONStream.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONIterators.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONMemory.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONPreparse.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONChildren.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONNode.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/libjson.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONNode_Mutex.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONValidator.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONAllocator.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libjson/_internal/Source/JSONWorker.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngwutil.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngwtran.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngrutil.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngread.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngmem.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngpread.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngerror.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngget.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngwrite.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngtrans.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngset.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngrio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngwio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/pngrtran.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/libpng/png.c"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/lodepng/lodepng.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/md5/MD5.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/minizip/zip.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/minizip/mztools.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/minizip/ioapi.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/minizip/unzip.c"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/mtrand/MTH_MTRand.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/mtrand/mtrand.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/nfd/nfd_common.c"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/pugixml/pugixml.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/stb/stb_sprintf.cpp"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/Ogg/bitwise.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/Ogg/framing.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-block.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-codebook.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-floor0.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-floor1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-info.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-mapping0.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-mdct.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-registry.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-res012.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-sharedbook.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-synthesis.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-vorbisfile.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/tremor/tremor-window.c"

    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/adler32.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/gzlib.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/inffast.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/gzclose.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/uncompr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/deflate.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/inflate.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/gzread.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/inftrees.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/zutil.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/infback.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/gzwrite.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/trees.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/compress.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./src/Engine/Libs/zlib/crc32.c"

    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/nfd/nfd_zenity.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/CSlrFileFromDocuments.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/CSlrFileFromOS.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/CSlrFileFromResources.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/CSlrFileFromTemp.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/DBG_Log.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/gl3w.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/main.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/SYS_FileSystem.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/SYS_Memory.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/SYS_Platform.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/SYS_SharedMemory.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/./platform/Linux/src.Linux/SYS_LinuxWrapper.cpp"

)
